--- a/templates/payment.html
+++ b/templates/payment.html
@@ -58,14 +58,14 @@
             <h1>Complete Your Registration</h1>
             
             <div class="plan-details">
-                <h2>Premium Plan</h2>
-                <div class="price">$4.00/month</div>
+                <h2>Monthly Subscription</h2>
+                <div class="price">$6.99/month</div>
                 <ul class="features">
-                    <li>All Core Features</li>
-                    <li>Unlimited API Access</li>
-                    <li>24/7 Support</li>
+                    <li>Secure Transaction</li>
+                    <li>Basic & Advance features</li>
+                    <li>Future Updates</li>
                     <li>HIPAA Compliance</li>
-                    <li>Custom Integration</li>
+                    <li>Cancel Anytime</li>
                     <li>Priority Processing</li>
                 </ul>
             </div>
@@ -76,7 +76,6 @@
                 <input type="hidden" name="user_id" value="2edfe4dd-e377-46d4-bccb-d087adb2873e">
                 <input type="hidden" name="email" value="">
                 <button id="checkout-and-portal-button" type="submit-" class="submit-button">Checkout</button>
-            </form>
             </form>
         </div>
     </div>
