--- a/templates/signup.html
+++ b/templates/signup.html
@@ -186,10 +186,10 @@
 
         #confirm-read {
             opacity: 0.5;
-            cursor: not-allowed;
+            cursor: pointer;
         }
 
-        #confirm-read.active {
+        #confirm-read.primary-btn.active {
             opacity: 1;
             cursor: pointer;
         }
