--- a/templates/landing.html
+++ b/templates/landing.html
@@ -396,6 +396,7 @@
                 <a href="/" class="dropdown-item">Home</a>
                 <a href="#about" class="dropdown-item">About</a>
                 <a href="/pricing" class="dropdown-item">Pricing</a>
+                <a href="/faq" class="dropdown-item">FAQ</a>
                 <a href="#contact" class="dropdown-item">Contact</a>
                 <a href="#demo-video" class="dropdown-item">Demo Video</a>
             </div>
@@ -554,6 +555,7 @@
                         <li><a href="/">Home</a></li>
                         <li><a href="#features">Features</a></li>
                         <li><a href="/pricing">Pricing</a></li>
+                        <li><a href="/faq">FAQ</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
