--- a/templates/signup.html
+++ b/templates/signup.html
@@ -262,7 +262,7 @@
                     <input type="checkbox" id="baa-checkbox" name="agreeToBaa" required disabled>
                     <label for="baa-checkbox">I agree to the <a href="#" class="agreement-link" data-agreement="baa">Business Associate Agreement</a></label>
                 </div>
-                <button type="submit" class="submit-button">Sign up</button>
+                <button type="submit" class="submit-button">Proceed to Payment</button>
             </form>
 
             <div class="form-toggle">
