--- a/templates/login.html
+++ b/templates/login.html
@@ -138,7 +138,7 @@
             </form>
 
             <div class="form-toggle" id="login-toggle">
-                <p>Don't have an account? <a href="/signup">Sign up</a></p>
+                <p>Don't have an account? <a href="/signup">Sign up</a> | <a href="/">Home</a></p>
             </div>
 
             <div style="text-align:center; margin-top:10px;">
