--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -328,8 +328,8 @@
                     {% endfor %}
                 </ul>
                 
-                <a href="{{ plan.payment_link }}" class="pricing-button" target="_blank">
-                    Get Started with {{ plan.name }}
+                <a href="{{ plan.signup_url }}" class="pricing-button">
+                    Register Now
                 </a>
             </div>
             {% endfor %}
